integracao Window + SOMP e teste simples